--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
 
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 }
