--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.1"
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.example.sportsapp"
         minSdkVersion 15
@@ -38,5 +38,7 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation group: 'io.reactivex.rxjava2', name: 'rxandroid', version: '2.0.2'
 
 }
